@@ -77,6 +77,11 @@ static void fpm_php_disable(char *value, int (*zend_disable)(const char *, size_
 }
 /* }}} */
 
+#define FPM_PHP_INI_ALTERING_ERROR   -1
+#define FPM_PHP_INI_APPLIED          1
+#define FPM_PHP_INI_EXTENSION_FAILED 0
+#define FPM_PHP_INI_EXTENSION_LOADED 2
+
 int fpm_php_apply_defines_ex(struct key_value_s *kv, int mode) /* {{{ */
 {
 
@@ -90,43 +95,55 @@ int fpm_php_apply_defines_ex(struct key_value_s *kv, int mode) /* {{{ */
 		zend_interned_strings_switch_storage(0);
 		php_dl(value, MODULE_PERSISTENT, &zv, 1);
 		zend_interned_strings_switch_storage(1);
-		return Z_TYPE(zv) == IS_TRUE;
+		return Z_TYPE(zv) == IS_TRUE ? FPM_PHP_INI_EXTENSION_LOADED : FPM_PHP_INI_EXTENSION_FAILED;
 	}
 
 	if (fpm_php_zend_ini_alter_master(name, name_len, value, value_len, mode, PHP_INI_STAGE_ACTIVATE) == FAILURE) {
-		return -1;
+		return FPM_PHP_INI_ALTERING_ERROR;
 	}
 
 	if (!strcmp(name, "disable_functions") && *value) {
 		zend_disable_functions(value);
-		return 1;
+		return FPM_PHP_INI_APPLIED;
 	}
 
 	if (!strcmp(name, "disable_classes") && *value) {
 		char *v = strdup(value);
 		PG(disable_classes) = v;
 		fpm_php_disable(v, zend_disable_class);
-		return 1;
+		return FPM_PHP_INI_APPLIED;
 	}
 
-	return 1;
+	return FPM_PHP_INI_APPLIED;
 }
 /* }}} */
 
 static int fpm_php_apply_defines(struct fpm_worker_pool_s *wp) /* {{{ */
 {
 	struct key_value_s *kv;
+	int apply_result;
+	bool extension_loaded = false;
 
 	for (kv = wp->config->php_values; kv; kv = kv->next) {
-		if (fpm_php_apply_defines_ex(kv, ZEND_INI_USER) == -1) {
+		apply_result = fpm_php_apply_defines_ex(kv, ZEND_INI_USER);
+		if (apply_result == FPM_PHP_INI_ALTERING_ERROR) {
 			zlog(ZLOG_ERROR, "Unable to set php_value '%s'", kv->key);
+		} else if (apply_result == FPM_PHP_INI_EXTENSION_LOADED) {
+			extension_loaded = true;
 		}
 	}
 
 	for (kv = wp->config->php_admin_values; kv; kv = kv->next) {
-		if (fpm_php_apply_defines_ex(kv, ZEND_INI_SYSTEM) == -1) {
+		apply_result = fpm_php_apply_defines_ex(kv, ZEND_INI_SYSTEM);
+		if (apply_result == FPM_PHP_INI_ALTERING_ERROR) {
 			zlog(ZLOG_ERROR, "Unable to set php_admin_value '%s'", kv->key);
+		} else if (apply_result == FPM_PHP_INI_EXTENSION_LOADED) {
+			extension_loaded = true;
 		}
+	}
+
+	if (extension_loaded) {
+		zend_collect_module_handlers();
 	}
 
 	return 0;
